--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,4 +23,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add data" />
+    <Button
+    android:id="@+id/updata_data"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Updata data" />
+    <Button
+        android:id="@+id/query_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Query data" />
 </LinearLayout>
